--- a/CatalogoProductos-accesodatos/CatalogoProductos-accesodatos.csproj
+++ b/CatalogoProductos-accesodatos/CatalogoProductos-accesodatos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F47CFFA-AFED-456A-92B5-43FDFE5D1457}</ProjectGuid>
+    <ProjectGuid>{D1B7C461-562C-466A-88D1-CDB6B60739E2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CatalogoProductos_negocio</RootNamespace>
-    <AssemblyName>CatalogoProductos-negocio</AssemblyName>
+    <RootNamespace>CatalogoProductos_accesodatos</RootNamespace>
+    <AssemblyName>CatalogoProductos-accesodatos</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,20 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArticuloNegocio.cs" />
-    <Compile Include="CategoriaNegocio.cs" />
-    <Compile Include="MarcaNegocio.cs" />
+    <Compile Include="AccesoDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CatalogoProductos-accesodatos\CatalogoProductos-accesodatos.csproj">
-      <Project>{d1b7c461-562c-466a-88d1-cdb6b60739e2}</Project>
-      <Name>CatalogoProductos-accesodatos</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CatalogoProductos-dominio\CatalogoProductos-dominio.csproj">
-      <Project>{67eab1a8-0a81-4600-8e19-f3c610b22f65}</Project>
-      <Name>CatalogoProductos-dominio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
