--- a/CatalogoProductos-utilidades/CatalogoProductos-utilidades.csproj
+++ b/CatalogoProductos-utilidades/CatalogoProductos-utilidades.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F47CFFA-AFED-456A-92B5-43FDFE5D1457}</ProjectGuid>
+    <ProjectGuid>{E8E14741-B863-46C0-A557-0A96F05B5E31}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CatalogoProductos_negocio</RootNamespace>
-    <AssemblyName>CatalogoProductos-negocio</AssemblyName>
+    <RootNamespace>CatalogoProductos_utilidades</RootNamespace>
+    <AssemblyName>CatalogoProductos-utilidades</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,19 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArticuloNegocio.cs" />
-    <Compile Include="CategoriaNegocio.cs" />
-    <Compile Include="MarcaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CatalogoProductos-accesodatos\CatalogoProductos-accesodatos.csproj">
-      <Project>{d1b7c461-562c-466a-88d1-cdb6b60739e2}</Project>
-      <Name>CatalogoProductos-accesodatos</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CatalogoProductos-dominio\CatalogoProductos-dominio.csproj">
-      <Project>{67eab1a8-0a81-4600-8e19-f3c610b22f65}</Project>
-      <Name>CatalogoProductos-dominio</Name>
+    <ProjectReference Include="..\CatalogoProductos-Web\CatalogoProductos-web.csproj">
+      <Project>{2815c1c9-849e-488b-b3c2-87c33d02f720}</Project>
+      <Name>CatalogoProductos-web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
