--- a/CatalogoProductos-Web/CatalogoProductos-web.csproj
+++ b/CatalogoProductos-Web/CatalogoProductos-web.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Css\Styles.css" />
     <Content Include="Default.aspx" />
+    <Content Include="DetalleProducto.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Productos.aspx" />
     <Content Include="Registro.aspx" />
@@ -81,6 +82,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DetalleProducto.aspx.cs">
+      <DependentUpon>DetalleProducto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DetalleProducto.aspx.designer.cs">
+      <DependentUpon>DetalleProducto.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
