Redireccion de error: comienzo

--- a/CatalogoProductos-Web/CatalogoProductos-web.csproj
+++ b/CatalogoProductos-Web/CatalogoProductos-web.csproj
@@ -82,6 +82,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClasesHelper\ErrorHelper.cs" />
     <Compile Include="ClasesHelper\LoginHelper.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
