--- a/CatalogoProductos-Web/CatalogoProductos-web.csproj
+++ b/CatalogoProductos-Web/CatalogoProductos-web.csproj
@@ -228,6 +228,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Icono\" />
     <Folder Include="ImagenesPerfiles\" />
     <Folder Include="Imagenes\" />
   </ItemGroup>
